# eos

./: .gitignore  generate.sh  monad_copyright.py  test_parser.ts
backend/: .gitignore  debug_routes.py  migrate_db.py  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: artifacts.py  auth.py  events.py  sessions.py  workspaces.py
backend/app/core/: config.py  llm_protocol.py  logging.py  security.py
backend/app/core/artifact/: factory.py  store.py
backend/app/core/artifact/stores/: database.py  filesystem.py  gcs.py  http.py
backend/app/db/: base_class.py  session.py
backend/app/models/: __init__.py  archived_pane.py  artifact.py  chat.py  user.py  workspace.py
backend/app/schemas/: archived_pane.py  artifact.py  base.py  chat.py  user.py  workspace.py
backend/app/services/: artifact_service.py  execution_service.py  llm_providers.py  session_service.py  user_service.py  workspace_service.py
backend/app/services/auth/: dependency.py  http.py  local.py  protocol.py
backend/examples/: google_adk_demo.py
backend/tests/: conftest.py  test_api.py  test_auth_flow.py  test_auth_http.py  test_chat_refactor.py  test_execution_integration.py  test_llm_provider.py  test_llm_provider_logic.py  test_new_auth.py  test_streaming.py
backend/tests/api/: test_auth_di.py  test_base.py
backend/tests/services/: test_artifact_store.py  test_default_session.py  test_http_auth.py
docs/: COPYRIGHT.MD  README.md
frontend/: package-lock.json  package.json  (+1 more)
(+59 files in other folders)
